--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "classnames": "^2.3.1",
     "next": "12.0.7",
     "next-auth": "^4.0.2",
     "react": "17.0.2",
