--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "css:dev": "TAILWIND_MODE=watch postcss ./styles/tailwind.css -o ./styles/globals.css --watch",
+    "css:build": "postcss ./styles/tailwind.css -o ./styles/globals.css"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
@@ -23,7 +25,7 @@
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.4",
-    "tailwindcss": "^2.2.19",
+    "tailwindcss": "^3.0.0-alpha.2",
     "typescript": "4.5.2"
   }
 }
