--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@tailwindcss/typography": "^0.5.0-alpha.3",
     "classnames": "^2.3.1",
+    "fast-average-color": "^7.0.1",
     "next": "12.0.7",
     "next-auth": "^4.0.2",
     "react": "17.0.2",
